<resources>
    <string name="app_name">影听</string>
    <!--launch_page-->
    <string name="launch_page_version">V 1.0</string>
    <string name="launch_screen_copyright">Copyright©2018 GLF</string>
    <!--login_page-->
    <string name="login_page_login_title">影听~您的法语学习专家</string>
    <string name="login_page_phone_title">手机： </string>
    <string name="login_page_verify_title">验证码： </string>
    <string name="login_page_language_title">语言： </string>
    <string name="login_page_send_code">发送验证码</string>
    <string name="login_page_send_code_ing">正在发送</string>
    <string name="login_page_send_code_wait_1">重新发送(</string>
    <string name="login_page_send_code_wait_2">秒后)</string>
    <string name="login_page_error_0">验证码错误</string>
    <string name="login_page_error_1">手机号为空</string>
    <string name="login_page_error_2">该手机号获取验证码次数达到当天上限</string>
    <string name="login_page_error_3">手机号或验证码为空</string>
    <string name="login_page_error_4">手机号格式不正确或不支持</string>
    <string name="login_page_error_5">验证码不正确</string>
    <string name="login_page_error_6">验证码已过期</string>
    <string name="login_page_error_7">获取验证码失败，没有网络连接</string>
    <string name="login_page_error_8">服务器异常</string>
    <string name="login_page_error_9">登录失败</string>
    <string name="login_page_error_10">连接失败</string>
    <string name="login_page_dialog_title_1">提示</string>
    <string name="login_page_dialog_title_2">错误</string>
    <string name="login_page_dialog_ok">确定</string>
    <string name="login_page_dialog_cancel">取消</string>
    <string name="login_page_login">登   陆</string>
    <string name="login_page_login_success">登陆成功！</string>
    <string name="first_time_name_title">姓名： </string>
    <string name="first_time_school_title">学校名称： </string>
    <!--translate_frame-->
    <string name="translate_frame_title">哎哟，您写错啦！</string>
    <string name="translate_frame_main_example_title">例句： </string>
    <string name="translate_frame_loading">加载中</string>
    <!--new_login_page-->
    <string name="new_login_page_title">设置个人资料</string>
    <string name="new_login_page_tips">第一次登陆请输入个人信息</string>
    <string name="new_login_page_schoool_name_title">学校名称： </string>
    <string name="new_login_page_real_name_title">真实姓名： </string>
    <string name="new_login_page_clear_content">清   空</string>
    <string name="new_login_page_submit">提   交</string>
    <string name="new_login_page_error_0">输入不能为空</string>
    <string name="new_login_page_error_1">服务器异常</string>
    <string name="new_login_page_error_2">连接失败</string>
    <!--index_page-->
    <string name="index_page_loading">加载中</string>
    <string name="index_page_practise">练习模式</string>
    <string name="index_page_contest">比赛模式</string>
    <string name="index_page_join">比赛报名</string>
    <string name="index_page_dictionary">生词本</string>
    <string name="index_page_exit">退   出</string>
    <string name="index_page_sign_off">注销登录</string>
    <string name="index_page_exit_tips">是否要注销当前账号？</string>
    <string name="index_page_sign_off_tips">是否要退出影听？</string>
    <!--video_add_new_word-->
    <string name="movie_title">当前播放： </string>
    <string name="test_head_sign">（比赛模式）</string>
    <string name="test_result_title">比赛完成</string>
    <!--test_input_dialog-->
    <string name="test_input_dialog_title">字幕听写</string>
    <string name="test_input_dialog_ok">确 定</string>
    <string name="test_input_dialog_idontknow">我 不 会 写</string>
    <string name="test_input">请输入</string>
    <!--test_result-->
    <string name="test_result_score_notes">本次听写成绩： </string>
    <string name="score_unit">分</string>
    <string name="test_sum_word_notes">总词数： </string>
    <string name="word_unit">词</string>
    <string name="test_sum_word_right_notes">正确词数： </string>
    <string name="test_sum_word_wrong_notes">错误词数： </string>
    <string name="test_result_ok">完 成</string>
    <!--resources_picket-->
    <string name="resources_picket_title_mp4">选择电影</string>
    <string name="resources_picket_title_ass">选择字幕</string>
    <string name="resources_picket_now_path_title">当前路径：</string>
    <string name="resources_picket_selected_title">已选择</string>
    <string name="resources_picket_noselect_title">未选择</string>
    <string name="resources_picket_please_select">请选择</string>
    <string name="resources_picket_next">下一步</string>
    <string name="resources_picket_ok">完成</string>
    <!--FileAdapter-->
    <string name="folder_num">个文件</string>
    <!--word_note_list-->
    <string name="word_note_list_title">生词本</string>
    <string name="word_note_list_cancel_delete">返 回</string>
    <string name="word_note_list_delete">删 除</string>
    <string name="word_num">个单词</string>
    <!--participate_contest-->
    <string name="participa_contest_title">选择要参加的比赛</string>
    <string name="participa_contest_participate">参 加</string>
    <string name="participa_contest_back">返 回</string>
    <!--ParticipatedContestList-->
    <string name="participated_contest_title">选择要进行的比赛</string>
    <string name="participated_contest_start">开 始</string>
</resources>
