<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glf.roideladictee.LoginPage">
    <LinearLayout
        android:id="@+id/launch_screen_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/launch_screen_login_logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/launch_screen_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#199900"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="@string/login_page_login_title"/>
        <TextView
            android:id="@+id/launch_screen_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#196600"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/launch_page_version"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">
        <TextView
            android:id="@+id/launch_screen_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textColor="#196600"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/launch_screen_copyright"/>
    </LinearLayout>
</RelativeLayout>
