<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glf.roideladictee.LoginPage">
    <LinearLayout
        android:id="@+id/login_page_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_page_login_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/login_page_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#199900"
            android:textSize="22dp"
            android:textStyle="bold"
            android:text="@string/login_page_login_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/login_page_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="#03254C"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/login_page_phone_title" />
            <EditText
                android:id="@+id/login_page_phone"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="4dp"
                android:background="@drawable/colored_border_input"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="15dp"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/login_page_verify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#03254C"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/login_page_verify_title" />
            <EditText
                android:id="@+id/login_page_verify"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="4dp"
                android:background="@drawable/colored_border_input"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textColor="#666666"
                android:textSize="15dp"
                android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/login_page_send_code"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/login_page_send_code"
                android:textSize="15dp"
                android:textColor="#EAEAEA"
                android:alpha="1"
                android:background="@drawable/first_page_button"/>
            <Button
                android:id="@+id/login_page_login"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:text="@string/login_page_login"
                android:textSize="15dp"
                android:textColor="#EAEAEA"
                android:alpha="1"
                android:background="@drawable/first_page_button"/>
        </LinearLayout>
        <TextView
            android:id="@+id/login_page_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/login_page_error_0"
            android:textSize="12dp"
            android:textColor="#FF0000"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_page_loading_bar_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:alpha="0">
        <com.glf.roideladictee.metroloading.MetroLoadingView
            android:id="@+id/login_page_loading_bar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:transform_color_mode="symmetry"
            app:transform_color="#ffffff"
            app:indicator_color="#199900"
            app:indicator_height="10dp"
            app:indicator_width="10dp"
            app:indicator="circle"
            app:fade="true"
            />
    </LinearLayout>
</RelativeLayout>
